# Astro

./: .gitignore  .gitmodules  Astro.ini  CMakeLists.txt  FindSDL2.cmake  LICENSE  LICENSE-3RD-PARTY.txt  README.md  astroerror.txt  game.pak  generate_wren_blobs.py  icon.rc  main.c  package-engine.sh
Packer/: CMakeLists.txt  main.c
assets/: Credits.txt  assets.ini  level0.tmj
docs/: API.md  AssetCompiler.md  CNAME  Debug.md  Gemfile  GettingStarted.md  Pak.md  README.md  SimpleGame.md  TiledIntegration.md  Wren.md  _config.yml  index.md
docs/classes/: Audio.md  AudioData.md  BitmapFont.md  Buffer.md  Camera.md  Engine.md  Entity.md  File.md  Font.md  Gamepad.md  Hitbox.md  INI.md  Input.md  Keyboard.md  Level.md  LightSource.md  Lighting.md  Math.md  Model.md  Mouse.md  Polygon.md  Renderer.md  Shader.md  Shadow.md  Sprite.md  Surface.md  Texture.md  Tileset.md  index.md
examples/fixed-timestep/: README.md
examples/fixed-timestep/assets/: assets.json
examples/fixed-timestep/data/game/: Game.wren
examples/fixed-timestep/prog/: Game.wren
examples/simple-game/: Astro.ini  README.md  astroerror.txt
examples/simple-game/assets/: assets.ini  assets.json  level0.tmj
examples/simple-game/assets/test/: assets.json  buffer
examples/simple-game/data/: Credits.txt  FreeLicense.txt  player_idle.json
examples/simple-game/data/game/: Game.wren  Player.wren  init.wren
examples/simple-game/prog/: Entities.wren  Game.wren  Player.wren
examples/testing/: README.md
examples/testing/data/: assets.json
examples/testing/data/game/: Game.wren  init.wren
prog/: Game.wren  Tileset.wren  init.wren  main.wren  test-suite.wren
prog/lib/: Audio.wren  BitmapFont.wren  Camera.wren  Constants.wren  Drawing.wren  Engine.wren  File.wren  INI.wren  Input.wren  Levels.wren  Renderer.wren  Runtime.wren  Save.wren  Sprite.wren  Surface.wren  Texture.wren  Tiled.wren  Util.wren
src/: AssetCompiler.c  BinaryBlobs.h  Blobs.h  BuildOptions.h  ConfigFile.c  ConfigFile.h  Input.c  Input.h  IntermediateTypes.h  InternalBindings.c  InternalBindings.h  JUTypes.c  JUTypes.h  JamUtil.c  JamUtil.h  Packer.c  Packer.h  RendererBindings.c  RendererBindings.h  Runtime.c  Runtime.h  SteamBindings.cpp  SteamBindings.h  Util.c  Util.h  UtilBindings.c  UtilBindings.h  VK2DTypes.c  VK2DTypes.h  VMConfig.c  VMConfig.h  Validation.c  Validation.h  WrenHeaders.h  WrenPreprocessor.c  WrenPreprocessor.h  cJSON.c  cJSON.h  cute_sound.h  cute_tiled.h  (+3 more)
